# sobjectizer

./: .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  LICENSE  README  README.md  THANKS
dev/: CMakeLists.txt  build.rb  build_all.rb  local-build-example.rb  local-build.rb.example  obj_placement.rb
dev/__issue_67_drafts/: build_checks.rb  check_1.cpp  check_1.rb  check_1_1.cpp  check_1_1.rb  check_1_2.cpp  check_1_2.rb  check_2.cpp  check_2.rb  check_2_1.cpp  check_2_1.rb  check_3.cpp  check_3.rb  check_3_1.cpp  check_3_1.rb  check_3_2.cpp  check_3_2.rb  transform_then_redirect_sink_v001.cpp
dev/ace_lib_distrib/: readme.txt
dev/cmake/: CmakeQuickHowto.txt  run_tests.bat  target.cmake  unittest.cmake
dev/sample/so_5/: CMakeLists.txt  build_samples.rb
dev/sample/so_5/adv_thread_pool_fifo/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/agent_name/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/bind_transformer/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/blinking_led/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb  statechart_plantuml.txt  statechart_plantuml_horizontal.txt
dev/sample/so_5/chameneos_prealloc_msgs/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/chameneos_simple/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/child_soenv/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/chstate/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/chstate_msg_tracing/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/collector_many_performers/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/collector_performer_pair/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/convert_lib/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/coop_listener/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/coop_notification/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/coop_user_resources/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/custom_direct_mbox/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/custom_error_logger/: CMakeLists.txt  main.cpp  prj.rb  prj_s.rb
dev/sample/so_5/custom_work_thread_factory/: CMakeLists.txt  (+3 more)
dev/so_5/: CMakeLists.txt  adhoc_agent_wrapper.hpp  agent.cpp  agent.hpp  agent_context.hpp  agent_coop.cpp  agent_coop.hpp  agent_coop_notifications.cpp  agent_coop_notifications.hpp  agent_identity.hpp  agent_ref_fwd.hpp  agent_state_listener.hpp  agent_tuning_options.hpp  all.hpp  api.hpp  atomic_refcounted.cpp  atomic_refcounted.hpp  bind_then_transform_helpers.hpp  bind_transformer_helpers.hpp  chrono_helpers.hpp  compiler_features.hpp  coop.cpp  coop.hpp  coop_handle.hpp  coop_listener.hpp  current_thread_id.cpp  current_thread_id.hpp  custom_mbox.hpp  declspec.hpp  detect_os.hpp  disp.cpp  disp.hpp  disp_binder.cpp  disp_binder.hpp  env_infrastructures.hpp  enveloped_msg.cpp  enveloped_msg.hpp  environment.cpp  environment.hpp  environment_infrastructure.hpp  (+72 more)
dev/so_5/cmake/: so_5-config.cmake.in  sobjectizer-config.cmake.in  target.cmake
dev/so_5/details/: abort_on_fatal_error.hpp  always_false.hpp  invoke_noexcept_code.hpp  ios_helpers.hpp  lambda_traits.hpp  remaining_time_counter.hpp  rollback_on_exception.hpp  safe_cv_wait_for.hpp  suppress_exceptions.hpp  sync_helpers.hpp
dev/so_5/disp/: abstract_work_thread.cpp  abstract_work_thread.hpp
dev/so_5/experimental/: testing.hpp
dev/so_5/h/: atomic_refcounted.hpp  chrono_helpers.hpp  compiler_features.hpp  current_thread_id.hpp  custom_mbox.hpp  declspec.hpp  error_logger.hpp  exception.hpp  mchain_helper_functions.hpp  msg_tracing.hpp  outliving.hpp  priority.hpp  ret_code.hpp  spinlocks.hpp  stdcpp.hpp  stop_guard.hpp  thread_helper_functions.hpp  timers.hpp  types.hpp  version.hpp  wait_indication.hpp  wrapped_env.hpp
dev/so_5/impl/: agent_ptr_compare.hpp  coop_private_iface.hpp  coop_repository_basis.cpp  coop_repository_basis.hpp  delivery_filter_storage.hpp  disp_repository.cpp  enveloped_msg_details.hpp  final_dereg_chain_helpers.hpp  internal_agent_iface.hpp  internal_env_iface.hpp  internal_message_iface.hpp  layer_core.cpp  layer_core.hpp  local_mbox.hpp  local_mbox_basic_subscription_info.hpp  make_mchain.hpp  mbox_core.cpp  mbox_core.hpp  mbox_iface_for_timers.hpp  mchain_details.hpp  message_limit_action_msg_tracer.hpp  message_limit_internals.hpp  message_sink_for_agent.hpp  message_sink_ptr_compare.hpp  message_sink_with_message_limit.hpp  message_sink_without_message_limit.hpp  mpsc_mbox.hpp  msg_tracing_helpers.cpp  msg_tracing_helpers.hpp  mt_env_infrastructure.cpp  mt_env_infrastructure.hpp  named_local_mbox.cpp  named_local_mbox.hpp  process_unhandled_exception.cpp  process_unhandled_exception.hpp  simple_mtsafe_st_env_infrastructure.cpp  simple_not_mtsafe_st_env_infrastructure.cpp  st_env_infrastructure_reuse.hpp  state_listener_controller.cpp  state_listener_controller.hpp  (+11 more)
dev/so_5/msinks/: transform_then_redirect.hpp
dev/so_5/rt/: adhoc_agent_wrapper.cpp  adhoc_agent_wrapper.hpp  agent.cpp  agent.hpp  agent_context.hpp  agent_coop.cpp  agent_coop.hpp  agent_coop_notifications.cpp  agent_coop_notifications.hpp  agent_ref_fwd.hpp  agent_state_listener.cpp  agent_state_listener.hpp  agent_tuning_options.hpp  atomic_refcounted.cpp  coop_listener.cpp  coop_listener.hpp  disp.cpp  disp.hpp  disp_binder.cpp  disp_binder.hpp  env_infrastructures.hpp  enveloped_msg.cpp  enveloped_msg.hpp  environment.cpp  environment.hpp  environment_infrastructure.cpp  environment_infrastructure.hpp  event_data.hpp  event_exception_logger.cpp  event_queue.cpp  event_queue.hpp  event_queue_hook.cpp  event_queue_hook.hpp  event_queue_proxy.cpp  execution_demand.hpp  handler_makers.cpp  handler_makers.hpp  mbox.cpp  mbox.hpp  mbox_fwd.hpp  (+20 more)
dev/so_5/stats/: controller.hpp  messages.hpp  prefix.hpp  repository.cpp  repository.hpp  std_names.cpp  std_names.hpp  work_thread_activity.hpp
dev/test/so_5/: CMakeLists.txt  build_tests.rb  time_limited_execution.hpp  wont_compile_helpers.hpp
(+2646 files in other folders)
