project(sample)

add_subdirectory(hello_world)
add_subdirectory(hello_world_adhoc)

add_subdirectory(hello_evt_handler)
add_subdirectory(hello_evt_lambda)
add_subdirectory(hello_all)
add_subdirectory(hello_delay)
add_subdirectory(hello_periodic)
add_subdirectory(chstate)
add_subdirectory(disp)
add_subdirectory(coop_listener)
add_subdirectory(exception_logger)
add_subdirectory(exception_reaction)
add_subdirectory(coop_notification)
add_subdirectory(coop_user_resources)
add_subdirectory(subscriptions)
add_subdirectory(parent_coop)
add_subdirectory(chameneos_simple)
add_subdirectory(chameneos_prealloc_msgs)
add_subdirectory(svc/hello)
add_subdirectory(svc/parallel_sum)
add_subdirectory(svc/exceptions)
add_subdirectory(ping_pong_minimal)
add_subdirectory(ping_pong)
add_subdirectory(ping_pong_with_owner)
add_subdirectory(hardwork_imit)
add_subdirectory(many_timers)
add_subdirectory(custom_error_logger)
add_subdirectory(dining_philosophers)
add_subdirectory(dining_philosophers_2)
add_subdirectory(work_generation)
add_subdirectory(collector_performer_pair)
add_subdirectory(collector_many_performers)
add_subdirectory(simple_message_deadline)
add_subdirectory(pimpl)
add_subdirectory(private_dispatcher_hello)
add_subdirectory(private_dispatcher_restarts)
add_subdirectory(private_dispatcher_for_children)
add_subdirectory(redirect_and_transform)
add_subdirectory(queue_size_stats)
add_subdirectory(delivery_filters)
