project(sample)

add_subdirectory(hello_world)
add_subdirectory(hello_world_simple_not_mtsafe)

add_subdirectory(hello_evt_handler)
add_subdirectory(hello_evt_lambda)
add_subdirectory(hello_all)
add_subdirectory(hello_delay)
add_subdirectory(hello_periodic)
add_subdirectory(chstate)
add_subdirectory(chstate_msg_tracing)
add_subdirectory(selective_msg_tracing)
add_subdirectory(nohandler_msg_tracing)
add_subdirectory(disp)
add_subdirectory(coop_listener)
add_subdirectory(exception_logger)
add_subdirectory(exception_reaction)
add_subdirectory(coop_notification)
add_subdirectory(coop_user_resources)
add_subdirectory(subscriptions)
add_subdirectory(parent_coop)
add_subdirectory(chameneos_simple)
add_subdirectory(chameneos_prealloc_msgs)
add_subdirectory(ping_pong_minimal)
add_subdirectory(ping_pong)
add_subdirectory(ping_pong_with_owner)
add_subdirectory(hardwork_imit)
add_subdirectory(many_timers)
add_subdirectory(custom_error_logger)
add_subdirectory(simple_message_deadline)
add_subdirectory(dispatcher_hello)
add_subdirectory(dispatcher_restarts)
add_subdirectory(dispatcher_for_children)
add_subdirectory(redirect_and_transform)
add_subdirectory(queue_size_stats)
add_subdirectory(delivery_filters)
add_subdirectory(make_pipeline)
add_subdirectory(machine_control)
add_subdirectory(news_board)
add_subdirectory(prio_work_stealing)
add_subdirectory(mchain_handler_formats)
add_subdirectory(mchain_multi_consumers)
add_subdirectory(wrapped_env_demo_2)
add_subdirectory(producer_consumer_mchain)

add_subdirectory(blinking_led)
add_subdirectory(intercom_statechart)
add_subdirectory(state_deep_history)

add_subdirectory(adv_thread_pool_fifo)

add_subdirectory(mchain_select)
add_subdirectory(mchain_fibonacci)

add_subdirectory(wrapped_env_demo_3)

add_subdirectory(mutable_msg_agents)
add_subdirectory(modify_resend_as_immutable)
add_subdirectory(two_handlers)

add_subdirectory(stop_guard)

add_subdirectory(deadletter_handler)

add_subdirectory(make_new_direct_mbox)

add_subdirectory(make_agent_ref)

add_subdirectory(default_message_limits)

add_subdirectory(named_dispatchers_layer)

add_subdirectory(custom_work_thread_factory)

add_subdirectory(custom_direct_mbox)

add_subdirectory(single_sink_binding)

add_subdirectory(unique_subscribers_mbox)
add_subdirectory(introduce_named_mbox)

